Scale, height and width

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <button class="btn" id="btnMinus">
           <i class="fa-solid fa-minus" style="color: #ffffff"></i>
         </button>
+        <div class="display" id="heightDisplay">Height</div>
+        <div class="display" id="zoomDisplay">Scale</div>
+        <div class="display" id="widthDisplay">Width</div>
         <button class="btn" id="btnPlus">
           <i class="fa-solid fa-plus" style="color: #ffffff"></i>
         </button>
@@ -47,7 +50,7 @@
           <div class="icon">
             <i class="fas fa-images"></i>
           </div>
-
+          <img src="" id="img" hidden />
           <span class="header">Drag & Drop</span>
           <span class="header">or <span class="button">browes</span></span>
           <input type="file" hidden />
