width, height and download button

--- a/index.html
+++ b/index.html
@@ -50,16 +50,18 @@
           <div class="icon">
             <i class="fas fa-images"></i>
           </div>
-          <img src="" id="img" hidden />
+          <!-- <img src="" id="img" hidden /> -->
           <span class="header">Drag & Drop</span>
           <span class="header">or <span class="button">browes</span></span>
-          <input type="file" hidden />
+          <input class="input" type="file" hidden />
           <span class="support">Supprts: JEPG, JPG, PDF</span>
         </div>
       </div>
     </div>
     <!-- Crooper Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
+
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
     <script src="app.js"></script>
   </body>
