--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <i class="fa-solid fa-minus" style="color: #ffffff"></i>
         </button>
         <div class="display" id="heightDisplay">Height</div>
-        <div class="display" id="zoomDisplay">Scale</div>
+        <div class="scaleDisplay" id="zoomDisplay">Scale</div>
         <div class="display" id="widthDisplay">Width</div>
         <button class="btn" id="btnPlus">
           <i class="fa-solid fa-plus" style="color: #ffffff"></i>
