width and height working and download as pdf

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <button class="btn" id="btnMinus">
           <i class="fa-solid fa-minus" style="color: #ffffff"></i>
         </button>
-        <div class="display" id="heightDisplay">Height</div>
+        <div class="display height" id="heightDisplay">Height</div>
         <div class="scaleDisplay" id="zoomDisplay">Scale</div>
-        <div class="display" id="widthDisplay">Width</div>
+        <div class="display width" id="widthDisplay">Width</div>
         <button class="btn" id="btnPlus">
           <i class="fa-solid fa-plus" style="color: #ffffff"></i>
         </button>
@@ -48,7 +48,7 @@
       <div class="drag-area">
         <div class="image-area">
           <div class="icon">
-            <i class="fas fa-images"></i>
+            <img src="upload-icon.png"></img>
           </div>
           <!-- <img src="" id="img" hidden /> -->
           <span class="header">Drag & Drop</span>
